@@ -76,6 +76,6 @@ DIST netbeans-xml-6.0-m10_pre20070608171640.tar.bz2 7637340 RMD160 bb4faa7d3ea80
 DIST netbeans-xtest-6.0-m10_pre20070608171640.tar.bz2 4709728 RMD160 4b6d275e30010b40a9aab7fa626cdd8f5347c20a SHA1 592abc5ab7b9aa4d957485c3c675b84f1ecff461 SHA256 a750bd207aab87e8b7e0e90a2a69aca6a9960f49f06b9b2e16ad64964cd2bc11
 DIST netbeans_mobility-5_5_1-linux.bin 52745216 RMD160 2058ac6701b47f378ead48851329420360169980 SHA1 844fc236667b5a3df57c6c1b195d246a900a6029 SHA256 a47e9ef5f2fdce60d2c6b65ad1e76be8b70257b89ae60dae1bdc33965e814f27
 EBUILD netbeans-5.5.1.ebuild 15257 RMD160 a6690d8fc51713e540d264b3c7de7dc6c1b8fa26 SHA1 ac9ceb18f01639ccf02e2a71d32f1749723ee54a SHA256 7ae84f3ad1d82ebd5d351cd806bb3c4abb8f185e9c21bf6618783ee0efad5158
-EBUILD netbeans-6.0_alpha10_pre20070608171640.ebuild 26207 RMD160 4c9703f542a3be07142c79e61eb17189edf61563 SHA1 5b0a941fc5ece037e533711bd6f08d8c298ade5b SHA256 05f3bc9d566b00b0428c6efd95eda95a015553fd6153e59990d4ffbdf46696f1
-MISC ChangeLog 15516 RMD160 f3c6be77ff38d97cbb66f5a365f3e9a544a8ff86 SHA1 709c0390014bb2e426071aa2b5374bd3228c654f SHA256 4e6394fba80d8599be6fe59549ed80f3c6b58690e3459dd83f0d0395944e7ae8
+EBUILD netbeans-6.0_alpha10_pre20070608171640.ebuild 31429 RMD160 102b6e22ca624b043f3a8c6fd178a08ca5b56dd3 SHA1 427f59ff25ddc952389d33812ff7c98880d75345 SHA256 db7c070688d8da15b87fb1a66136ceb5c626336a85090c289f71c36301186f88
+MISC ChangeLog 15652 RMD160 1ce0f6cea07bee4d26fd49aa0ae37efc728fc3f7 SHA1 9ee6456d07a40bd7f15e8f088ef8401da1c27a5b SHA256 3f042832b9ac656b65e3d64c7d13047790afbeac883728d649cb879e6b2989eb
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
